infra/kubernetes/base/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
  - name: gateway
    kind: Gateway
    group: gateway.networking.k8s.io
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - localhost
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: beerlog-service
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-redirect
spec:
  parentRefs:
  - name: gateway
    kind: Gateway
    group: gateway.networking.k8s.io
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - localhost
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
